crates/stef-build/tests/snapshots/compiler__compile@attributes.stef.snap
---
source: crates/stef-build/tests/compiler.rs
expression: "#[deprecated = \"don't use\", compress]\n#[validate(\n    in_range(min = 100, max = 200),\n    non_empty,\n)]\nstruct Sample"
input_file: crates/stef-parser/tests/inputs/attributes.stef
---
pub struct Sample;
impl ::stef::Encode for Sample {
    fn encode(&self, w: &mut impl ::stef::BufMut) {}
}
impl ::stef::Decode for Sample {
    fn decode(r: &mut impl ::stef::Buf) -> ::stef::buf::Result<Self> {
        loop {
            match ::stef::buf::decode_id(r)? {
                ::stef::buf::END_MARKER => break,
                _ => continue,
            }
        }
        Ok(Self)
    }
}

